# pkmn

./: Cargo.toml  README.md
pdex/: Cargo.toml
pdex/src/: dex.rs  download.rs  main.rs  ui.rs  util.rs
pdex/src/ui/: browser.rs  component.rs  mod.rs  navigation.rs  page.rs  pages.rs  widgets.rs
pdex/src/ui/component/: hyperlink.rs  image.rs  list.rs  macros.rs  mod.rs  page.rs  pokedex.rs  stack.rs  stats.rs  tabs.rs  testing.rs
src/: api.rs  cache.rs  lib.rs  main.rs
src/api/: cache.rs  mod.rs
src/model/: ability.rs  berry.rs  contest.rs  data.rs  evolution.rs  item.rs  lang.rs  location.rs  mod.rs  mov.rs  nature.rs  pokedex.rs  region.rs  resource.rs  species.rs  stat.rs  text.rs  ty.rs  version.rs
