[package]
name = "pkmn"
version = "0.1.0"
authors = ["Miguel Young de la Sota <mcyoung@mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lru = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.1", features = ["blocking"] }
thiserror = "1.0"